--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://unpkg.com">
+    
 
-    <title>flex-materialio</title>
+    <title>title</title>
 
-    <meta name="description" content="flex materialio html5 boilerplate scss pwa">
+    <meta name="description" content="description">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
@@ -18,13 +20,13 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <!-- ie tiling/pinnig -->
-    <meta name="application-name" content="flex-materialio">
+    <meta name="application-name" content="app-name">
     <meta name="msapplication-tooltip" content="A description of what this site does.">
     <meta name="msapplication-navbutton-color" content="#ff0000">
     <meta name="msapplication-window" content="width=768;height=1024">
 
     <!-- apple add to homescreen -->
-    <meta name="apple-mobile-web-app-title" content="flex-materialio">
+    <meta name="apple-mobile-web-app-title" content="app-name">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
@@ -46,8 +48,6 @@
 
     <meta name="theme-color" content="#fafafa">
 
-
-    <title>flex-material</title>
 </head>
 <body>
   <!--[if IE]>
@@ -157,11 +157,35 @@
         </section>      
 
     
-
    
     <!-- Instantiate single textfield component rendered in the document -->
     <script src="assets/js/modernizr-3.7.1.min.js"></script>
     <script type="module" src="assets/js/app.js"></script>
+
+       <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="/__/firebase/6.4.0/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#reserved-urls -->
+
+    <!-- Initialize Firebase -->
+    <script src="/__/firebase/init.js"></script>
+
+    <script>
+    if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function() {
+            navigator.serviceWorker.register('service-worker.js').then(function(registration) {
+            // Registration was successful
+            console.log('ServiceWorker registration successful with scope: ', registration.scope);
+            }, function(err) {
+            // registration failed :(
+            console.log('ServiceWorker registration failed: ', err);
+            });
+        });
+        }
+    </script>
 
 </body>
 </html>
