Do integration tests b/w www, core-app #1

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             </div>
         </footer>
 
-        <div style="background-color: #5f6368; height: 100px; margin: -5px"></div>
+        <div style="background-color: #5f6368; height: 100px;margin-top: -5px"></div>
 
 
     <script src="assets/js/modernizr-3.7.1.min.js"></script>
