--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
   <title>Cardbase.io</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#0358ff">
+  
 
   <meta name="Description" content="Page not found">
 <!--  <meta name="Description" content="Author: A.N. Author,-->
@@ -18,6 +18,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap" rel="stylesheet">
 
+  <meta name="theme-color" content="#8e24aa">
 </head>
 <body style="margin: 0.25rem; height: inherit; font-family: Roboto, sans-serif" >
 
